# alignment-handbook

./: .gitignore  README.md  install.sh  push.py  pyproject.toml  submit.py  util.py
recipes/: jupiter.env  leonardo.env
recipes/data_selection/sft/: generate.py
recipes/dpo/: generate_jupiter.py
recipes/mv_exp/dpo/: generate.py  generate_jupiter.py
recipes/mv_exp/dpo/templates/: jupiter_dpo.slurm.j2
recipes/mv_exp/sft/: generate.py  generate_jupiter.py  generate_juwels.py  generate_lambda.py
recipes/mv_exp/sft/templates/: jupiter_sft.slurm.j2
recipes/sft/: generate.py
recipes/templates/: chat.j2  chat_masked.j2  slurm.j2
scripts/: dpo.py  sft.py
src/alignment/: __init__.py  callbacks.py  configs.py  data.py  model_utils.py
